--- a/index.html
+++ b/index.html
@@ -79,6 +79,147 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+     <div class="container">
+    <div class="px-4 py-5 my-1 text-center">
+      <img class="d-block mx-auto mb-2" src="ADHYAYAN COACHING CENTRE.png" alt="" width="72" height="57">
+      <h1 class="display-5 fw-bold">ADHYAYAN COACHING CENTRE</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4 ">"Unlock your potential with our dynamic and passionated teacher who are dedicated to
+          empowering you for success!!"</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button type="button" class="btn btn-primary btn-lg px-4 gap-3" data-bs-toggle="modal"
+            data-bs-target="#joinusModal">JOIN US</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4" data-bs-toggle="modal"
+            data-bs-target="#loginModal">LOGIN</button>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- joinus Modal -->
+    <div class="modal fade" id="joinusModal" tabindex="-1" aria-labelledby="joinusModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="joinusModalLabel">Resister Yourself</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">@</span>
+                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                  aria-describedby="addon-wrapping">
+              </div>
+              <select class="form-select my-3" aria-label="Default select example">
+                <option selected>Select Your Class</option>
+                <option value="1">Nur To 5th</option>
+                <option value="6">6th</option>
+                <option value="7">7th</option>
+                <option value="8">8th</option>
+                <option value="9">9th</option>
+                <option value="10">10th</option>
+                <option value="11">11th</option>
+                <option value="12">12th</option>
+                <option value="13">Other</option>
+              </select>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              </div>
+              <div class="form-check my-2">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                <label class="form-check-label" for="flexCheckChecked">
+                  I am Student
+                </label>
+              </div>
+              <div class="form-check my-2">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                <label class="form-check-label" for="flexCheckChecked">
+                 I am Teacher
+                </label>
+              </div>
+              <div class="form-check my-2">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                <label class="form-check-label" for="flexCheckChecked">
+                  I am Parents/Guadian
+                </label>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label"> Create Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label"> Re-Enter Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+              </div>
+              <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              </div>
+              <div class="input-group mb-3 my-2">
+                <input type="file" class="form-control" id="inputGroupFile02">
+                <label class="input-group-text" for="inputGroupFile02">Upload</label>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- login Modal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="loginModalLabel">Log In With Your Id</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">@</span>
+                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                  aria-describedby="addon-wrapping">
+              </div>
+            
+              <select class="form-select my-3" aria-label="Default select example">
+                <option selected>Select Your Class</option>
+                <option value="1">Nur To 5th</option>
+                <option value="6">6th</option>
+                <option value="7">7th</option>
+                <option value="8">8th</option>
+                <option value="9">9th</option>
+                <option value="10">10th</option>
+                <option value="11">11th</option>
+                <option value="12">12th</option>
+                <option value="13">Other</option>
+              </select>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Enter Your Id/Passward</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+              </div>
+
+
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
