--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-     <div class="container">
+     <div class="container mt-3">
     <div class="px-4 py-5 my-1 text-center">
       <img class="d-block mx-auto mb-2" src="ADHYAYAN COACHING CENTRE.png" alt="" width="72" height="57">
       <h1 class="display-5 fw-bold">ADHYAYAN COACHING CENTRE</h1>
