--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="loginModalLabel">Log In With Your Id</h5>
+            <h5 class="modal-title" id="loginModalLabel">ADHYAYAN COACHING CENTRE</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
               <form>
               <img class="d-block mx-auto mb-2" src="ADHYAYAN COACHING CENTRE.png" alt="" width="72" height="57">
-              <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+              <h1 class="h3 mb-3 fw-normal">Please Log In in</h1>
           
               <div class="form-floating my-1">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -201,7 +201,7 @@
                   <input type="checkbox" value="remember-me"> Remember me
                 </label>
               </div>
-              <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+              <button class="w-100 btn btn-lg btn-primary" type="submit">Log In</button>
               <p class="mt-5 mb-3 text-muted">©Gautam kumar</p>
             </form>
           </div>
